// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createConventionalChangelog > default 1`] = `
[
  "<!-- changelog -->",
  "### ✨ Features",
  "",
  "- update github workflows (ca0db97)",
  "- lazy implementation loading (792d6b6)",
  "- @wroud/di-tools-codemod (1c4c04c)",
  "- add full screen mode for di analyzer (d7ef251)",
  "- add robots.txt (19bdf3b)",
  "- move graph to another page (6379e3f)",
  "- add di analyzer (5ce1124)",
  "- adjust SEO in docs (201aba6)",
  "- add logo to docs (0a14136)",
  "- add strict types to ServicesRegistry.register (6d43540)",
  "- add github pages (f193d85)",
  "- add module and types (5ebef39)",
  "- add cache cleanup action (0c4a86d)",
  "- configure code coverage (cf9454d)",
  "- enable zero installs (0d675f9)",
  "- add github workflows (e92166a)",
  "- init workspace (1306e07)",
  "",
  "### 🩹 Fixes",
  "",
  "- add automated releases (26768a0)",
  "- ci-cd (d5ac8c0)",
  "- tsconfig (dcf424a)",
  "- cyclic dependencies detection (0c7228a)",
  "- change package type (43a43b5)",
  "- run as common js module (4672641)",
  "- exports (b65f7e9)",
  "- robots.txt name (5e5e195)",
  "- graph example (3aa1529)",
  "- docs sitemap filter (4d04ec9)",
  "- adjust memory threshold for GC (10c7455)",
  "- docs logo styles in light theme (c5ff8f6)",
  "- proper error message while resolving scoped dependency for singleton service (b6a45ff)",
  "- update types (ff3238e)",
  "- version lazy loading leads to incorrect badge on first render (d7517cc)",
  "- add logs to console (25845a7)",
  "- ci-cd (1a8cd2f)",
  "- ci-cd (d95c6d4)",
  "- ci-cd (57eee77)",
  "- ci-cd (b931c2c)",
  "- workflow (ab52910)",
  "- build docs separately (7720341)",
  "- link to the di overview page (83012a5)",
  "- pages deploy workflow (83d3093)",
  "- return publish package dir (83108bd)",
  "- add version (ae35e9f)",
  "- publish workflow (ee089fa)",
  "- codecov ci (41d0e01)",
  "- collect coverage (62aec5f)",
  "- remove dist (a8879c6)",
  "- configure ci (c27dbf0)",
  "",
  "### ⚠️  Breaking Changes",
  "",
  "- test commit with something (1dfaff1)",
  "  - Some breaky change",
  "- disable auto release (5a84e8d)",
  "  - disable auto release",
  "- release @wroud/di@0.9.1 (cde6098)",
  "  - Some breaky change",
  "",
  "### 📖 Documentation",
  "",
  "- ModuleRegistry api (e5142e0)",
  "- add documentation for @wroud/di-tools-analyzer (52276d5)",
  "- remove extra (cf852fa)",
  "- make examples simpler (5f55b1c)",
  "- simplify samples (f76c015)",
  "- add "Why DI?" page (33c7dd4)",
  "- update docs (e7759c1)",
  "- complete base articles (5286029)",
  "- collect jest statistic for provided package (f98f7b1)",
  "- add installation section (6fb62f9)",
  "- add dependency injection overview page (fc9ef0f)",
  "",
]
`;

exports[`createConventionalChangelog > with metadata co-authors 1`] = `
[
  "<!-- changelog -->",
  "### ✨ Features",
  "",
  "- update github workflows (ca0db97)",
  "- lazy implementation loading (792d6b6)",
  "- @wroud/di-tools-codemod (1c4c04c)",
  "- add full screen mode for di analyzer (d7ef251)",
  "- add robots.txt (19bdf3b)",
  "- move graph to another page (6379e3f)",
  "- add di analyzer (5ce1124)",
  "- adjust SEO in docs (201aba6)",
  "- add logo to docs (0a14136)",
  "- add strict types to ServicesRegistry.register (6d43540)",
  "- add github pages (f193d85)",
  "- add module and types (5ebef39)",
  "- add cache cleanup action (0c4a86d)",
  "- configure code coverage (cf9454d)",
  "- enable zero installs (0d675f9)",
  "- add github workflows (e92166a)",
  "- init workspace (1306e07)",
  "",
  "### 🩹 Fixes",
  "",
  "- add automated releases (26768a0)",
  "- ci-cd (d5ac8c0)",
  "- tsconfig (dcf424a)",
  "- cyclic dependencies detection (0c7228a)",
  "- change package type (43a43b5)",
  "- run as common js module (4672641)",
  "- exports (b65f7e9)",
  "- robots.txt name (5e5e195)",
  "- graph example (3aa1529)",
  "- docs sitemap filter (4d04ec9)",
  "- adjust memory threshold for GC (10c7455)",
  "- docs logo styles in light theme (c5ff8f6)",
  "- proper error message while resolving scoped dependency for singleton service (b6a45ff)",
  "- update types (ff3238e)",
  "- version lazy loading leads to incorrect badge on first render (d7517cc)",
  "- add logs to console (25845a7)",
  "- ci-cd (1a8cd2f)",
  "- ci-cd (d95c6d4)",
  "- ci-cd (57eee77)",
  "- ci-cd (b931c2c)",
  "- workflow (ab52910)",
  "- build docs separately (7720341)",
  "- link to the di overview page (83012a5)",
  "- pages deploy workflow (83d3093)",
  "- return publish package dir (83108bd)",
  "- add version (ae35e9f)",
  "- publish workflow (ee089fa)",
  "- codecov ci (41d0e01)",
  "- collect coverage (62aec5f)",
  "- remove dist (a8879c6)",
  "- configure ci (c27dbf0)",
  "",
  "### ⚠️  Breaking Changes",
  "",
  "- test commit with something (1dfaff1)",
  "  - Some breaky change",
  "- disable auto release (5a84e8d)",
  "  - disable auto release",
  "- release @wroud/di@0.9.1 (cde6098)",
  "  - Some breaky change",
  "",
  "### 📖 Documentation",
  "",
  "- ModuleRegistry api (e5142e0)",
  "- add documentation for @wroud/di-tools-analyzer (52276d5)",
  "- remove extra (cf852fa)",
  "- make examples simpler (5f55b1c)",
  "- simplify samples (f76c015)",
  "- add "Why DI?" page (33c7dd4)",
  "- update docs (e7759c1)",
  "- complete base articles (5286029)",
  "- collect jest statistic for provided package (f98f7b1)",
  "- add installation section (6fb62f9)",
  "- add dependency injection overview page (fc9ef0f)",
  "",
  "### ❤️  Contributors",
  "",
  "- John Doe",
  "- Karl Marx <karl@example.com>",
  "- [Jane Doe](https://example.com/jane) <jane@example.com>",
  "- Jack Doe ([@jack](https://example.com/jack))",
  "- [Kevin Doe](https://example.com/kevin) ([@kevin](https://example.com/kevin)) <kevin@example.com>",
  "",
]
`;

exports[`createConventionalChangelog > with metadata formatter 1`] = `
[
  "<!-- changelog -->",
  "### ✨ Features",
  "",
  "- (ca0db97) update github workflows (ca0db97)",
  "- (792d6b6) lazy implementation loading (792d6b6)",
  "- (1c4c04c) @wroud/di-tools-codemod (1c4c04c)",
  "- (d7ef251) add full screen mode for di analyzer (d7ef251)",
  "- (19bdf3b) add robots.txt (19bdf3b)",
  "- (6379e3f) move graph to another page (6379e3f)",
  "- (5ce1124) add di analyzer (5ce1124)",
  "- (201aba6) adjust SEO in docs (201aba6)",
  "- (0a14136) add logo to docs (0a14136)",
  "- (6d43540) add strict types to ServicesRegistry.register (6d43540)",
  "- (f193d85) add github pages (f193d85)",
  "- (5ebef39) add module and types (5ebef39)",
  "- (0c4a86d) add cache cleanup action (0c4a86d)",
  "- (cf9454d) configure code coverage (cf9454d)",
  "- (0d675f9) enable zero installs (0d675f9)",
  "- (e92166a) add github workflows (e92166a)",
  "- (1306e07) init workspace (1306e07)",
  "",
  "### 🩹 Fixes",
  "",
  "- (26768a0) add automated releases (26768a0)",
  "- (d5ac8c0) ci-cd (d5ac8c0)",
  "- (dcf424a) tsconfig (dcf424a)",
  "- (0c7228a) cyclic dependencies detection (0c7228a)",
  "- (43a43b5) change package type (43a43b5)",
  "- (4672641) run as common js module (4672641)",
  "- (b65f7e9) exports (b65f7e9)",
  "- (5e5e195) robots.txt name (5e5e195)",
  "- (3aa1529) graph example (3aa1529)",
  "- (4d04ec9) docs sitemap filter (4d04ec9)",
  "- (10c7455) adjust memory threshold for GC (10c7455)",
  "- (c5ff8f6) docs logo styles in light theme (c5ff8f6)",
  "- (b6a45ff) proper error message while resolving scoped dependency for singleton service (b6a45ff)",
  "- (ff3238e) update types (ff3238e)",
  "- (d7517cc) version lazy loading leads to incorrect badge on first render (d7517cc)",
  "- (25845a7) add logs to console (25845a7)",
  "- (1a8cd2f) ci-cd (1a8cd2f)",
  "- (d95c6d4) ci-cd (d95c6d4)",
  "- (57eee77) ci-cd (57eee77)",
  "- (b931c2c) ci-cd (b931c2c)",
  "- (ab52910) workflow (ab52910)",
  "- (7720341) build docs separately (7720341)",
  "- (83012a5) link to the di overview page (83012a5)",
  "- (83d3093) pages deploy workflow (83d3093)",
  "- (83108bd) return publish package dir (83108bd)",
  "- (ae35e9f) add version (ae35e9f)",
  "- (ee089fa) publish workflow (ee089fa)",
  "- (41d0e01) codecov ci (41d0e01)",
  "- (62aec5f) collect coverage (62aec5f)",
  "- (a8879c6) remove dist (a8879c6)",
  "- (c27dbf0) configure ci (c27dbf0)",
  "",
  "### ⚠️  Breaking Changes",
  "",
  "- (1dfaff1) test commit with something (1dfaff1)",
  "  - (1dfaff1) Some breaky change",
  "- (5a84e8d) disable auto release (5a84e8d)",
  "  - (5a84e8d) disable auto release",
  "- (cde6098) release @wroud/di@0.9.1 (cde6098)",
  "  - (cde6098) Some breaky change",
  "",
  "### 📖 Documentation",
  "",
  "- (e5142e0) ModuleRegistry api (e5142e0)",
  "- (52276d5) add documentation for @wroud/di-tools-analyzer (52276d5)",
  "- (cf852fa) remove extra (cf852fa)",
  "- (5f55b1c) make examples simpler (5f55b1c)",
  "- (f76c015) simplify samples (f76c015)",
  "- (33c7dd4) add "Why DI?" page (33c7dd4)",
  "- (e7759c1) update docs (e7759c1)",
  "- (5286029) complete base articles (5286029)",
  "- (f98f7b1) collect jest statistic for provided package (f98f7b1)",
  "- (6fb62f9) add installation section (6fb62f9)",
  "- (fc9ef0f) add dependency injection overview page (fc9ef0f)",
  "",
]
`;

exports[`createConventionalChangelog > with metadata url 1`] = `
[
  "<!-- changelog -->",
  "### ✨ Features",
  "",
  "- update github workflows ([ca0db97](https://example.com/ca0db97))",
  "- lazy implementation loading ([792d6b6](https://example.com/792d6b6))",
  "- @wroud/di-tools-codemod ([1c4c04c](https://example.com/1c4c04c))",
  "- add full screen mode for di analyzer ([d7ef251](https://example.com/d7ef251))",
  "- add robots.txt ([19bdf3b](https://example.com/19bdf3b))",
  "- move graph to another page ([6379e3f](https://example.com/6379e3f))",
  "- add di analyzer ([5ce1124](https://example.com/5ce1124))",
  "- adjust SEO in docs ([201aba6](https://example.com/201aba6))",
  "- add logo to docs ([0a14136](https://example.com/0a14136))",
  "- add strict types to ServicesRegistry.register ([6d43540](https://example.com/6d43540))",
  "- add github pages ([f193d85](https://example.com/f193d85))",
  "- add module and types ([5ebef39](https://example.com/5ebef39))",
  "- add cache cleanup action ([0c4a86d](https://example.com/0c4a86d))",
  "- configure code coverage ([cf9454d](https://example.com/cf9454d))",
  "- enable zero installs ([0d675f9](https://example.com/0d675f9))",
  "- add github workflows ([e92166a](https://example.com/e92166a))",
  "- init workspace ([1306e07](https://example.com/1306e07))",
  "",
  "### 🩹 Fixes",
  "",
  "- add automated releases ([26768a0](https://example.com/26768a0))",
  "- ci-cd ([d5ac8c0](https://example.com/d5ac8c0))",
  "- tsconfig ([dcf424a](https://example.com/dcf424a))",
  "- cyclic dependencies detection ([0c7228a](https://example.com/0c7228a))",
  "- change package type ([43a43b5](https://example.com/43a43b5))",
  "- run as common js module ([4672641](https://example.com/4672641))",
  "- exports ([b65f7e9](https://example.com/b65f7e9))",
  "- robots.txt name ([5e5e195](https://example.com/5e5e195))",
  "- graph example ([3aa1529](https://example.com/3aa1529))",
  "- docs sitemap filter ([4d04ec9](https://example.com/4d04ec9))",
  "- adjust memory threshold for GC ([10c7455](https://example.com/10c7455))",
  "- docs logo styles in light theme ([c5ff8f6](https://example.com/c5ff8f6))",
  "- proper error message while resolving scoped dependency for singleton service ([b6a45ff](https://example.com/b6a45ff))",
  "- update types ([ff3238e](https://example.com/ff3238e))",
  "- version lazy loading leads to incorrect badge on first render ([d7517cc](https://example.com/d7517cc))",
  "- add logs to console ([25845a7](https://example.com/25845a7))",
  "- ci-cd ([1a8cd2f](https://example.com/1a8cd2f))",
  "- ci-cd ([d95c6d4](https://example.com/d95c6d4))",
  "- ci-cd ([57eee77](https://example.com/57eee77))",
  "- ci-cd ([b931c2c](https://example.com/b931c2c))",
  "- workflow ([ab52910](https://example.com/ab52910))",
  "- build docs separately ([7720341](https://example.com/7720341))",
  "- link to the di overview page ([83012a5](https://example.com/83012a5))",
  "- pages deploy workflow ([83d3093](https://example.com/83d3093))",
  "- return publish package dir ([83108bd](https://example.com/83108bd))",
  "- add version ([ae35e9f](https://example.com/ae35e9f))",
  "- publish workflow ([ee089fa](https://example.com/ee089fa))",
  "- codecov ci ([41d0e01](https://example.com/41d0e01))",
  "- collect coverage ([62aec5f](https://example.com/62aec5f))",
  "- remove dist ([a8879c6](https://example.com/a8879c6))",
  "- configure ci ([c27dbf0](https://example.com/c27dbf0))",
  "",
  "### ⚠️  Breaking Changes",
  "",
  "- test commit with something ([1dfaff1](https://example.com/1dfaff1))",
  "  - Some breaky change",
  "- disable auto release ([5a84e8d](https://example.com/5a84e8d))",
  "  - disable auto release",
  "- release @wroud/di@0.9.1 ([cde6098](https://example.com/cde6098))",
  "  - Some breaky change",
  "",
  "### 📖 Documentation",
  "",
  "- ModuleRegistry api ([e5142e0](https://example.com/e5142e0))",
  "- add documentation for @wroud/di-tools-analyzer ([52276d5](https://example.com/52276d5))",
  "- remove extra ([cf852fa](https://example.com/cf852fa))",
  "- make examples simpler ([5f55b1c](https://example.com/5f55b1c))",
  "- simplify samples ([f76c015](https://example.com/f76c015))",
  "- add "Why DI?" page ([33c7dd4](https://example.com/33c7dd4))",
  "- update docs ([e7759c1](https://example.com/e7759c1))",
  "- complete base articles ([5286029](https://example.com/5286029))",
  "- collect jest statistic for provided package ([f98f7b1](https://example.com/f98f7b1))",
  "- add installation section ([6fb62f9](https://example.com/6fb62f9))",
  "- add dependency injection overview page ([fc9ef0f](https://example.com/fc9ef0f))",
  "",
]
`;
